Change script to run deepsupabasecode.py instead of main.py
all the error have been updated

--- a/.github/workflows/psx-scheduler.yml
+++ b/.github/workflows/psx-scheduler.yml
@@ -68,4 +68,4 @@ jobs:
       # ---------------- RUN SCRIPT ----------------
       - name: Run PSX scraper
         run: |
-          python main.py
+          python deepsupabasecode.py
